Fix layout issue

--- a/src/styles/components/CartItem.less
+++ b/src/styles/components/CartItem.less
@@ -31,6 +31,7 @@
   padding-left: 10px;
   position: relative;
   min-height: 70px;
+  min-width: 200px;
 }
 
 .CartItem__price {
